fixes nvim treesitter startup error due to migration

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -5,6 +5,19 @@ set-option -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# --- CLIPBOARD & COPY MODE ---
+# Use Vim keys in copy mode
+set-window-option -g mode-keys vi
+
+# Selection with mouse copies to system clipboard automatically
+# (Requires xsel, which is in your setup.sh)
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -ib"
+bind-key -T copy-mode    MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -ib"
+
+# Optional: Also allow 'y' to copy to system clipboard when in copy mode
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -ib"
+# -----------------------------
+
 # Split panes with | and -
 bind | split-window -h
 bind - split-window -v
