--- a/dotfiles/.config/espanso/match/base.yml
+++ b/dotfiles/.config/espanso/match/base.yml
@@ -1,6 +1,6 @@
 # espanso match file
 
-# For a complete introduction, visit the official docs at: [https://espanso.org/docs/](https://espanso.org/docs/)
+# For a complete introduction, visit the official docs at: https://espanso.org/docs/
 
 # You can use this file to define the base matches (aka snippets)
 # that will be available in every application when using espanso.
@@ -34,7 +34,7 @@ matches:
         params:
           cmd: "echo 'Hello from your shell'"
 
-  # And much more! For more information, visit the docs: [https://espanso.org/docs/](https://espanso.org/docs/)
+  # And much more! For more information, visit the docs: https://espanso.org/docs/
 
   # Expands ",t" to the current time, e.g., **1430**
   - trigger: ",t"
@@ -65,3 +65,9 @@ matches:
   - trigger: ",full"
     replace: "please show the FULL FILE for anything you edit, no code snippets or partial code, dont wrap with <context><file> tags those are just to help you contextualize, show in normal markdown code blocks, put file name/paths before the codeblock not inside the file as comment"
 
+  # SSH/Path shortcuts
+  - trigger: ",qrxl"
+    replace: "qrx@10.0.0.219:/home/qrx/Documents"
+
+  - trigger: ",qrxd"
+    replace: "qrx@10.0.0.3:/home/qrx/Documents"
